implemented the tabbed features section

--- a/css/style.css
+++ b/css/style.css
@@ -130,12 +130,13 @@ html {
     width: 40%;
     text-align: center; }
   .features__tab {
-    display: flex;
+    display: none;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     margin-left: 5rem;
-    margin-top: 5rem; }
+    margin-top: 5rem;
+    margin-bottom: 10rem; }
     .features__tab--left {
       position: relative; }
       .features__tab--left img {
@@ -165,13 +166,10 @@ html {
       text-decoration: none;
       padding: 1.5rem 3rem;
       color: #d3d3d3; }
-      .features__nav a:focus {
-        border-bottom: 2px solid #fa5757; }
     .features__nav--btns {
       border-bottom: 1px solid #9194a1;
       display: inline-block;
       padding: 1.5rem 0rem; }
-    .features__nav div {
-      display: none; }
-    .features__nav div:target {
-      display: flex; }
+
+.border__for-btn {
+  border-bottom: 2px solid #fa5757; }
