--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -138,12 +138,13 @@ html {
 
 
     &__tab {
-        display: flex;
+        display: none;
         flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
         margin-left: 5rem;
         margin-top: 5rem;
+        margin-bottom: 10rem;
         
         &--left { //    HEADER RIGHT SECTION
             position: relative;
@@ -194,9 +195,10 @@ html {
             color: #d3d3d3;
 
             &:focus {
-                border-bottom: 2px solid $color-secondary;                   
+                //border-bottom: 2px solid $color-secondary;                   
             }
         }
+        
 
         
         &--btns {
@@ -204,14 +206,10 @@ html {
             display: inline-block;
             padding: 1.5rem 0rem;
         }
-
-        div {
-            display: none;
-        }
-
-        div:target {
-            display: flex;
-
-        }
     }
+}
+
+
+.border__for-btn {
+    border-bottom: 2px solid $color-secondary;
 }
