--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-h2 {
-  font-weight: 500; }
+.h2 {
+  font-weight: 500;
+  text-align: center; }
 
 .btn-nav {
   padding: 1.3rem 2.2rem;
@@ -48,6 +49,22 @@ h2 {
 .para {
   color: #9194a1;
   line-height: 1.5; }
+
+.card {
+  display: flex;
+  height: 35rem;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
+  margin-right: 4rem;
+  border-radius: 6px; }
+  .card:nth-child(2) {
+    margin-top: 10rem;
+    position: relative; }
+  .card:nth-child(3) {
+    margin-top: 20rem;
+    position: relative; }
 
 *,
 *::before,
@@ -123,8 +140,6 @@ html {
 .features {
   height: 100vh;
   padding-left: 7rem; }
-  .features__heading {
-    text-align: center; }
   .features__para {
     margin: 2rem auto;
     width: 40%;
@@ -173,3 +188,28 @@ html {
 
 .border__for-btn {
   border-bottom: 2px solid #fa5757; }
+
+.download {
+  height: 100vh; }
+  .download__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    margin-top: -10rem; }
+    .download__box h3 {
+      font-weight: 400; }
+    .download__box p {
+      font-size: 1.2rem;
+      color: #9194a1; }
+    .download__box button {
+      margin-top: -1rem;
+      padding: 1rem 2rem; }
+  .download__para {
+    text-align: center;
+    margin: 2rem 38rem; }
+
+.faq__para {
+  width: 37%;
+  margin: 2rem auto;
+  text-align: center; }
