--- a/sass/main.css
+++ b/sass/main.css
@@ -1,6 +1,11 @@
 .h2 {
   font-weight: 500;
   text-align: center;
+  font-size: 3.5rem;
+}
+
+h5 {
+  font-weight: 400;
 }
 
 .btn-nav {
@@ -143,6 +148,11 @@ html {
           justify-content: space-between;
 }
 
+.header__logo {
+  height: 3rem;
+  width: 18rem;
+}
+
 .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -160,7 +170,7 @@ html {
   position: relative;
 }
 
-.header__content--right img {
+.header__content--right svg {
   position: relative;
   z-index: 1;
 }
@@ -304,16 +314,23 @@ html {
   text-align: center;
 }
 
-.features__nav a {
-  text-decoration: none;
+.features__nav--btns .tabbed-btns {
+  border: none;
   padding: 1.5rem 3rem;
   color: #d3d3d3;
+  font-size: 2rem;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.features__nav--btns .tabbed-btns:focus {
+  color: #000000;
+  outline: none;
 }
 
 .features__nav--btns {
   border-bottom: 1px solid #9194a1;
   display: inline-block;
-  padding: 1.5rem 0rem;
 }
 
 .border__for-btn {
@@ -322,6 +339,8 @@ html {
 
 .download {
   height: 100vh;
+  margin-top: 15rem;
+  margin-bottom: 10rem;
 }
 
 .download__box {
@@ -357,9 +376,170 @@ html {
   margin: 2rem 38rem;
 }
 
+.faq {
+  width: 100%;
+}
+
 .faq__para {
   width: 37%;
   margin: 2rem auto;
   text-align: center;
+}
+
+.faq__ques {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 30%;
+  width: 40%;
+  padding: 2rem 0;
+  border-bottom: 2px solid #eee;
+  cursor: pointer;
+}
+
+.faq__ques-q {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+  position: relative;
+}
+
+.faq__ques-q:hover {
+  color: #fa5757;
+}
+
+.faq__ques--para {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.6rem;
+  margin: 2rem auto;
+}
+
+.faq__ques--open {
+  display: inline;
+  visibility: visible;
+  opacity: 1;
+}
+
+.faq-arrow {
+  height: 2rem;
+  width: 2rem;
+}
+
+.faq__arrow {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+  fill: #fa5757;
+}
+
+.faq__btn {
+  padding: 1.5rem 2rem;
+  margin: 4rem auto;
+  display: block;
+}
+
+.contact {
+  height: 40vh;
+  background-color: #5368df;
+  text-align: center;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact__h3 {
+  margin-top: 4rem;
+  font-weight: 400;
+}
+
+.contact__h2 {
+  font-weight: 500;
+}
+
+.contact__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  margin: 4rem auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact__form--field {
+  width: 60%;
+  border-radius: 4px;
+  padding: 1rem 2rem;
+  border: none;
+}
+
+.contact__form--btn {
+  background-color: #fa5757;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  margin-top: 0;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #252b46;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 10vh;
+}
+
+.footer__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 50%;
+}
+
+.footer__nav a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 10%;
 }
 /*# sourceMappingURL=main.css.map */
